[gd_scene load_steps=13 format=3 uid="uid://dym68e1ku56fm"]

[ext_resource type="Texture2D" uid="uid://o7ivp2afxm5t" path="res://Car Test/360_F_123606607_Za4NHO4cn2akt1gToVCFFStsGSluacsz.jpg" id="1_gvi0b"]
[ext_resource type="Shader" path="res://Car Test/LevelScroll.gdshader" id="1_yv4yv"]
[ext_resource type="Script" path="res://Car Test/Health.gd" id="2_effuh"]
[ext_resource type="Script" path="res://Car Test/Score.gd" id="4_og6dl"]
[ext_resource type="Script" path="res://Car Test/CarController.gd" id="4_plxjm"]
[ext_resource type="Texture2D" uid="uid://cg2m3t5s7ut8a" path="res://Car Test/ezgif-4-20cd899a47.png" id="5_ijnlw"]
[ext_resource type="Script" path="res://Car Test/BackgroundSprite.gd" id="5_ynnxf"]
[ext_resource type="Script" path="res://Car Test/DebrisSpawner.gd" id="6_tu8mv"]
[ext_resource type="Script" path="res://Car Test/GameSpeedManager.gd" id="8_r8iyo"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_87pwo"]
shader = ExtResource("1_yv4yv")
shader_parameter/direction = Vector2(1, 0)
shader_parameter/speed = 0.08

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0qlvr"]
radius = 23.0
height = 286.0

[sub_resource type="Curve" id="Curve_2rq5j"]
_data = [Vector2(0, 0.08), 0.0, 0.1, 0, 0, Vector2(1, 1), 3.0, 0.0, 0, 0]
point_count = 2

[node name="Level" type="Node2D"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Score" type="Label" parent="UI"]
offset_left = 3.0
offset_right = 64.0
offset_bottom = 26.0
text = "Score: 0"
script = ExtResource("4_og6dl")
metadata/_edit_use_anchors_ = true

[node name="Health" type="Label" parent="UI"]
offset_left = 4.0
offset_top = 28.0
offset_right = 74.0
offset_bottom = 54.0
text = "Health: 0"
script = ExtResource("2_effuh")

[node name="Background" type="StaticBody2D" parent="."]
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Background"]
visible = false
polygon = PackedVector2Array(1, 385, 1153, 390, 1161, 608, 1185, 650, 1154, -1, 1, 0, -38, 649, 1.43828, 649.033, 1156, 608, -1, 604)

[node name="BackgroundSprite" type="Sprite2D" parent="Background"]
texture_repeat = 2
material = SubResource("ShaderMaterial_87pwo")
position = Vector2(577.5, 325)
scale = Vector2(2.15918, 1.8)
texture = ExtResource("1_gvi0b")
script = ExtResource("5_ynnxf")

[node name="DebrisSpawner" type="Timer" parent="."]
wait_time = 0.5
autostart = true
script = ExtResource("6_tu8mv")

[node name="Car" type="CharacterBody2D" parent="."]
position = Vector2(548, 487)
script = ExtResource("4_plxjm")
speed = 500.0

[node name="Car" type="Sprite2D" parent="Car"]
scale = Vector2(0.15, 0.15)
texture = ExtResource("5_ijnlw")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car"]
position = Vector2(0, 20)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_0qlvr")
metadata/_edit_lock_ = true

[node name="GameSpeedManager" type="Node" parent="."]
script = ExtResource("8_r8iyo")
maxDifficultySeconds = 10.0
difficultyCurve = SubResource("Curve_2rq5j")

[connection signal="timeout" from="DebrisSpawner" to="DebrisSpawner" method="_on_timeout"]
[connection signal="carBreakdown" from="Car" to="DebrisSpawner" method="_on_car_car_breakdown"]
[connection signal="carBreakdown" from="Car" to="GameSpeedManager" method="_on_car_car_breakdown"]
[connection signal="carReturn" from="Car" to="DebrisSpawner" method="_on_car_car_return"]
